[package]
name = "buffett-netutil"
version = "0.2"
description = "Network utilites for Bitconch chain"
authors = ["Bitconch Core Dev"]
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[features]
ipv6 = []

[dependencies]
log = "0.4.2"
ipnetwork = "0.12.7"
nix = "0.12.0"
pnet_datalink = "0.21.0"
rand = "0.6.1"
reqwest = "0.9.0"
socket2 = "0.3.8"

[dev-dependencies]
buffett-logger = { path = "../logger", version = "0.2" }

[lib]
name = "buffett_netutil"
