[package]
name = "soros-workspace"
description = "Blockchain, Rebuilt for Scale"
version = "0.12.3"
documentation = "https://docs.rs/bitconch"
homepage = "https://bitconch.io"
readme = "README.md"
repository = "https://github.com/bitconch/bus"
authors = ["Bitconch Dev Team"]
license = "Apache-2.0"
edition = "2018"

[badges]
codecov = { repository = "bitconch/bus", branch = "master", service = "github" }

[features]
chacha = ["soros/chacha"]
cuda = ["soros/cuda"]
erasure = ["soros/erasure"]

[dev-dependencies]
bincode = "1.1.2"
bs58 = "0.2.0"
hashbrown = "0.1.8"
log = "0.4.2"
rand = "0.6.5"
rayon = "1.0.0"
reqwest = "0.9.11"
serde_json = "1.0.39"
soros = { path = "core", version = "0.12.3" }
soros-budget-program = { path = "programs/budget", version = "0.12.3" }
soros-client = { path = "client", version = "0.12.3" }
soros-logger = { path = "logger", version = "0.12.3" }
soros-netutil = { path = "netutil", version = "0.12.3" }
soros-runtime = { path = "runtime", version = "0.12.3" }
soros-sdk = { path = "sdk", version = "0.12.3" }
soros-vote-api = { path = "programs/vote_api", version = "0.12.3" }
sys-info = "0.5.6"

[[bench]]
name = "banking_stage"

[[bench]]
name = "blocktree"

[[bench]]
name = "ledger"

[[bench]]
name = "gen_keys"

[[bench]]
name = "sigverify"

[[bench]]
required-features = ["chacha"]
name = "chacha"

[workspace]
members = [
    ".",
    "bench-streamer",
    "bench-tps",
    "core",
    "drone",
    "fullnode",
    "genesis",
    "keygen",
    "ledger-tool",
    "logger",
    "metrics",
    "programs/budget",
    "programs/budget_api",
    "programs/token",
    "programs/token_api",
    "programs/failure",
    "programs/noop",
    "programs/rewards",
    "programs/rewards_api",
    "programs/storage",
    "programs/storage_api",
    "programs/vote",
    "programs/vote_api",
    "replicator",
    "sdk",
    "upload-perf",
    "vote-signer",
    "wallet",
]
exclude = ["programs/bpf/rust/noop"]
