[package]
name = "buffett-core"
description = "Core library for Bitconch:buffett "
version = "0.1.1"
authors = [
    "Bitconch Core Dev Team",
]
license = "Apache-2.0"


[badges]
codecov = { repository = "bitconch/bus", branch = "master", service = "github" }

[features]
unstable = []
ipv6 = []
cuda = []
erasure = []
test = []
chacha = []

[dependencies]
atty = "0.2"
bincode = "1.1.2"
bs58 = "0.2.2"
byteorder = "1.3.1"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32"
dirs = "1.0.2"
env_logger = "0.5.12"
generic-array = { version = "0.12.0", default-features = false, features = ["serde"] }
getopts = "0.2"
influx_db_client = "0.3.4"
bitconch-jsonrpc-core = "0.1"
bitconch-jsonrpc-http-server = "0.1"
bitconch-jsonrpc-macros = "0.1"
ipnetwork = "0.12.7"
itertools = "0.7.8"
libc = "0.2.43"
libloading = "0.5.0"
log = "0.4.2"
matches = "0.1.6"
nix = "0.11.0"
pnet_datalink = "0.21.0"
rand = "0.5.1"
rayon = "1.0.0"
reqwest = "0.9.0"
ring = "0.13.5"
sha2 = "0.7.0"
serde = "1.0.27"
serde_cbor = "0.9.0"
serde_derive = "1.0.27"
serde_json = "1.0.10"
socket2 = "0.3.8"
buffett-interface = "0.1.0"
sys-info = "0.5.6"
tokio = "0.1"
tokio-codec = "0.1"
untrusted = "0.6.2"
buffett-crypto="0.1.1"
buffett-timing="0.1.0"
buffett-metrics="0.1.3"
buffett-budget="0.1.2"
[dev-dependencies]


[[bench]]
name = "bank"

[[bench]]
name = "banking_stage"

[[bench]]
name = "ledger"

[[bench]]
name = "signature"

[[bench]]
name = "sigverify"

[[bench]]
required-features = ["chacha"]
name = "chacha"

