[package]
name = "buffett-metrics"
version = "0.1.0"
authors = ["Bitconch Core Dev Team Benjamin"]
edition = "2018"

[dependencies]
env_logger = "0.6.1"
influx_db_client = "0.3.6"
lazy_static = "1.3.0"
log = "0.4.2"
reqwest = "0.9.17"
sys-info = "0.5.7"
buffett-core = "0.1"

[dev-dependencies]
rand = "0.6.5"