[package]
authors = ["Bitconch Dev Team"]
edition = "2018"
name = "soros-bench-streamer"
version = "0.12.3"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"

[dependencies]
clap = "2.32.0"
soros = { path = "../core", version = "0.12.3" }
soros-logger = { path = "../logger", version = "0.12.3" }
soros-netutil = { path = "../netutil", version = "0.12.3" }

[features]
cuda = ["soros/cuda"]
