[package]
authors = ["Bitconch Dev <info@bitconch.io>"]
edition = "2018"
name = "bitconch-bench-tps"
version = "0.12.0"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
clap = "2.32.0"
rayon = "1.0.3"
serde_json = "1.0.38"
bitconch = { path = "..", version = "0.12.0" }
bitconch-drone = { path = "../drone", version = "0.12.0" }
bitconch-logger = { path = "../logger", version = "0.12.0" }
bitconch-metrics = { path = "../metrics", version = "0.12.0" }
bitconch-sdk = { path = "../sdk", version = "0.12.0" }

[features]
cuda = ["bitconch/cuda"]
