[package]
authors = ["Bitconch Dev Team"]
edition = "2018"
name = "soros-bench-tps"
version = "0.12.3"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"

[dependencies]
clap = "2.32.0"
rayon = "1.0.3"
serde_json = "1.0.39"
soros = { path = "../core", version = "0.12.3" }
soros-client = { path = "../client", version = "0.12.3" }
soros-drone = { path = "../drone", version = "0.12.3" }
soros-logger = { path = "../logger", version = "0.12.3" }
soros-metrics = { path = "../metrics", version = "0.12.3" }
soros-sdk = { path = "../sdk", version = "0.12.3" }

[features]
cuda = ["soros/cuda"]
