[package]
name = "soros-client"
version = "0.12.3"
description = "Bitconch Client"
authors = ["Bitconch Dev Team"]
repository = "https://github.com/bitconch/bus"
homepage = "https://bitconch.io"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.1.2"
bs58 = "0.2.0"
log = "0.4.2"
reqwest = "0.9.11"
serde_json = "1.0.39"
soros-metrics = { path = "../metrics", version = "0.12.3" }
soros-netutil = { path = "../netutil", version = "0.12.3" }
soros-sdk = { path = "../sdk", version = "0.12.3" }

[dev-dependencies]
jsonrpc-core = "10.1.0"
jsonrpc-http-server = "10.1.0"
soros-logger = { path = "../logger", version = "0.12.3" }
