[package]
name = "soros-client"
version = "1.1.2"
description = "Soros Client"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
homepage = "https://bitconch.io/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.1.2"
bs58 = "0.2.0"
log = "0.4.2"
jsonrpc-core = "10.1.0"
reqwest = "0.9.11"
serde = "1.0.89"
serde_derive = "1.0.88"
serde_json = "1.0.39"
soros-netutil = { path = "../netutil", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }

[dev-dependencies]
jsonrpc-core = "10.1.0"
jsonrpc-http-server = "10.1.0"
soros-logger = { path = "../logger", version = "1.1.2"   }
