[package]
name = "soros-drone"
version = "0.12.3"
description = "Bitconch Drone"
authors = ["Bitconch Dev Team"]
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"
edition = "2018"

[features]
cuda = []

[dependencies]
bincode = "1.1.2"
bytes = "0.4"
byteorder = "1.3.1"
clap = "2.31"
log = "0.4.2"
serde = "1.0.89"
serde_derive = "1.0.89"
soros-logger = { path = "../logger", version = "0.12.3" }
soros-sdk = { path = "../sdk", version = "0.12.3" }
soros-metrics = { path = "../metrics", version = "0.12.3" }
tokio = "0.1"
tokio-codec = "0.1"

[lib]
name = "soros_drone"
crate-type = ["lib"]

[[bin]]
name = "soros-drone"
path = "src/bin/drone.rs"
