[package]
name = "soros-drone"
version = "1.1.2"
description = "Soros Drone"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[features]
cuda = []
erasure = []

[dependencies]
bincode = "1.1.3"
bytes = "0.4"
byteorder = "1.3.1"
clap = "2.33"
log = "0.4.2"
serde = "1.0.90"
serde_derive = "1.0.90"
soros-logger = { path = "../logger", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }
soros-metrics = { path = "../metrics", version = "1.1.2"   }
tokio = "0.1"
tokio-codec = "0.1"

[lib]
name = "soros_drone"
crate-type = ["lib"]

[[bin]]
name = "soros-drone"
path = "src/bin/drone.rs"
