[package]
authors = ["Bitconch Dev <info@bitconch.io>"]
edition = "2018"
name = "bitconch-fullnode-config"
description = "Blockchain, Rebuilt for Scale"
version = "0.12.0"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[features]
cuda = []

[dependencies]
clap = "2.32.0"
dirs = "1.0.2"
log = "0.4.2"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
bitconch-netutil = { path = "../netutil", version = "0.12.0" }
bitconch-sdk = { path = "../sdk", version = "0.12.0" }
untrusted = "0.6.2"

[lib]
name = "bitconch_fullnode_config"
