[package]
authors = ["Bitconch Dev Team"]
edition = "2018"
name = "soros-fullnode"
description = "Blockchain, Rebuilt for Scale"
version = "0.12.3"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"

[dependencies]
clap = "2.32.0"
log = "0.4.2"
serde_json = "1.0.39"
soros = { path = "../core", version = "0.12.3" }
soros-drone = { path = "../drone", version = "0.12.3" }
soros-logger = { path = "../logger", version = "0.12.3" }
soros-netutil = { path = "../netutil", version = "0.12.3" }
soros-metrics = { path = "../metrics", version = "0.12.3" }
soros-runtime = { path = "../runtime", version = "0.12.3" }
soros-sdk = { path = "../sdk", version = "0.12.3" }
soros-vote-api = { path = "../programs/vote_api", version = "0.12.3" }
soros-vote-signer = { path = "../vote-signer", version = "0.12.3" }

[features]
chacha = ["soros/chacha"]
cuda = ["soros/cuda"]
erasure = ["soros/erasure"]
