[package]
authors = ["Caesar Chad <caesar@bitconch.io>"]
edition = "2018"
name = "soros-fullnode"
description = "Blockchain, Rebuilt for Scale"
version = "1.1.2"
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
clap = "2.33.0"
log = "0.4.2"
serde_json = "1.0.39"
soros = { path = "../core", version = "1.1.2"   }
soros-drone = { path = "../drone", version = "1.1.2"   }
soros-logger = { path = "../logger", version = "1.1.2"   }
soros-netutil = { path = "../netutil", version = "1.1.2"   }
soros-metrics = { path = "../metrics", version = "1.1.2"   }
soros-runtime = { path = "../runtime", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }
soros-vote-api = { path = "../programs/vote_api", version = "1.1.2"   }
soros-vote-signer = { path = "../vote-signer", version = "1.1.2"   }

[features]
chacha = ["soros/chacha"]
cuda = ["soros/cuda"]
erasure = ["soros/erasure"]
