[package]
authors = ["Bitconch Dev <info@bitconch.io>"]
edition = "2018"
name = "bitconch-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "0.12.0"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
clap = "2.32.0"
serde_json = "1.0.38"
bitconch = { path = "..", version = "0.12.0" }
bitconch-sdk = { path = "../sdk", version = "0.12.0" }

[features]
cuda = ["bitconch/cuda"]
