[package]
authors = ["Bitconch Dev Team"]
edition = "2018"
name = "soros-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "0.12.3"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"

[dependencies]
clap = "2.32.0"
serde_json = "1.0.39"
soros = { path = "../core", version = "0.12.3" }
soros-sdk = { path = "../sdk", version = "0.12.3" }

[features]
cuda = ["soros/cuda"]
