[package]
authors = ["Caesar Chad <caesar@bitconch.io>"]
edition = "2018"
name = "soros-genesis"
description = "Blockchain, Rebuilt for Scale"
version = "1.1.2"
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
clap = "2.33.0"
serde_json = "1.0.39"
soros = { path = "../core", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }
soros-budget-api = { path = "../programs/budget_api", version = "1.1.2"   }
soros-stake-api = { path = "../programs/stake_api", version = "1.1.2"   }
soros-storage-api = { path = "../programs/storage_api", version = "1.1.2"   }
soros-token-api = { path = "../programs/token_api", version = "1.1.2"   }
soros-config-api = { path = "../programs/config_api", version = "1.1.2"   }
soros-exchange-api = { path = "../programs/exchange_api", version = "1.1.2"   }


[dev-dependencies]
hashbrown = "0.3.0"
soros-vote-api = { path = "../programs/vote_api", version = "1.1.2"   }

[features]
cuda = ["soros/cuda"]
erasure = []
