[package]
authors = ["Soros Maintainers <maintainers@soros.com>"]
edition = "2018"
name = "soros-gossip"
description = "Blockchain, Rebuilt for Scale"
version = "0.14.2"
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
homepage = "https://soros.com/"

[dependencies]
clap = "2.33.0"
env_logger = "0.6.1"
soros = { path = "../core", version = "0.14.2"   }
soros-client = { path = "../client", version = "0.14.2"    }
soros-netutil = { path = "../netutil", version = "0.14.2"   }
soros-sdk = { path = "../sdk", version = "0.14.2"   }

[features]
chacha = []
cuda = []
erasure = []
