[package]
authors = ["Soros Maintainers <maintainers@soros.com>"]
edition = "2018"
name = "soros-install"
description = "The soros cluster software installer"
version = "1.1.2"
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
homepage = "https://soros.com/"

[features]
cuda = []
erasure = []

[dependencies]
bincode = "1.1.3"
bs58 = "0.2.0"
bzip2 = "0.3.3"
console = "0.7.5"
chrono = { version = "0.4.0", features = ["serde"] }
clap = { version = "2.33.0"}
dirs = "1.0.5"
indicatif = "0.11.0"
lazy_static = "1.3.0"
log = "0.4.2"
reqwest = "0.9.15"
ring = "0.13.2"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_yaml = "0.8.8"
soros-client = { path = "../client", version = "1.1.2"   }
soros-config-api = { path = "../programs/config_api", version = "1.1.2"   }
soros-logger = { path = "../logger", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }
tar = "0.4.23"
tempdir = "0.3.7"
url = "1.7.2"
