[package]
name = "soros-keygen"
version = "0.12.3"
description = "Bitconch key generation utility"
authors = ["Bitconch Dev Team"]
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"
edition = "2018"

[features]
cuda = []

[dependencies]
dirs = "1.0.5"
clap = "2.31"
soros-sdk = { path = "../sdk", version = "0.12.3" }

[[bin]]
name = "soros-keygen"
path = "src/keygen.rs"

