[package]
name = "soros-keygen"
version = "1.1.2"
description = "Soros key generation utility"
authors = ["Soros Maintainers <maintainers@soros.com>"]
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
homepage = "https://soros.com/"
edition = "2018"

[features]
cuda = []
erasure = []

[dependencies]
dirs = "1.0.5"
clap = "2.33"
soros-sdk = { path = "../sdk", version = "1.1.2"   }

[[bin]]
name = "soros-keygen"
path = "src/keygen.rs"
