[package]
name = "soros-keygen"
version = "1.1.2"
description = "Soros key generation utility"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[features]
cuda = []
erasure = []

[dependencies]
dirs = "1.0.5"
clap = "2.33"
soros-sdk = { path = "../sdk", version = "1.1.2"   }

[[bin]]
name = "soros-keygen"
path = "src/keygen.rs"
