[package]
name = "soros-kvstore"
description = "Embedded Key-Value store for soros"
version = "1.1.2"
homepage = "https://soros.com/"
repository = "https://github.com/soros-labs/soros"
authors = ["Soros Maintainers <maintainers@soros.com>"]
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.1.3"
byteorder = "1.3.1"
chrono = "0.4.0"
crc = "1.8.1"
memmap = "0.7.0"
rand = "0.6.5"
serde = "1.0.90"
serde_derive = "1.0.90"

[dev-dependencies]
tempfile = "3.0.7"
