[package]
authors = ["Soros Maintainers <maintainers@soros.com>"]
edition = "2018"
name = "soros-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "0.14.0"
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
homepage = "https://soros.com/"

[dependencies]
clap = "2.33.0"
serde_json = "1.0.39"
soros = { path = "../core", version = "0.14.0" }
soros-sdk = { path = "../sdk", version = "0.14.0" }
soros-logger = { path = "../logger", version = "0.14.0" }
soros-runtime = { path = "../runtime", version = "0.14.0" }

[dev-dependencies]
assert_cmd = "0.11"

[features]
cuda = ["soros/cuda"]
erasure = []
