[package]
authors = ["Caesar Chad <caesar@bitconch.io>"]
edition = "2018"
name = "soros-ledger-tool"
description = "Blockchain, Rebuilt for Scale"
version = "1.1.2"
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
clap = "2.33.0"
serde_json = "1.0.39"
soros = { path = "../core", version = "1.1.2" }
soros-sdk = { path = "../sdk", version = "1.1.2" }
soros-logger = { path = "../logger", version = "1.1.2" }
soros-runtime = { path = "../runtime", version = "1.1.2" }

[dev-dependencies]
assert_cmd = "0.11"

[features]
cuda = ["soros/cuda"]
erasure = []
