[package]
name = "soros-logger"
version = "0.12.3"
description = "Bitconch Logger"
authors = ["Bitconch Dev Team"]
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"
edition = "2018"

[dependencies]
env_logger = "0.6.1"

[lib]
name = "soros_logger"
