[package]
name = "soros-logger"
version = "1.1.2"
description = "Soros Logger"
authors = ["Soros Maintainers <maintainers@soros.com>"]
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
homepage = "https://soros.com/"
edition = "2018"

[dependencies]
env_logger = "0.6.1"

[lib]
name = "soros_logger"
