[package]
name = "soros-logger"
version = "1.1.2"
description = "Soros Logger"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[dependencies]
env_logger = "0.6.1"

[lib]
name = "soros_logger"
