[package]
name = "soros-metrics"
version = "1.1.2"
description = "Soros Metrics"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[dependencies]
influx_db_client = "0.3.6"
log = "0.4.2"
reqwest = "0.9.15"
lazy_static = "1.3.0"
sys-info = "0.5.6"
soros-sdk = { path = "../sdk", version = "1.1.2"   }

[dev-dependencies]
rand = "0.6.5"

[lib]
name = "soros_metrics"
