[package]
name = "soros-netutil"
version = "1.1.2"
description = "Soros Network Utilities"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[dependencies]
bincode = "1.1.3"
clap = "2.33.0"
log = "0.4.2"
nix = "0.12.0"
rand = "0.6.1"
socket2 = "0.3.8"
soros-logger = { path = "../logger", version = "1.1.2"   }
tokio = "0.1"

[lib]
name = "soros_netutil"

[[bin]]
name = "soros-ip-address"
path = "src/bin/ip_address.rs"

[[bin]]
name = "soros-ip-address-server"
path = "src/bin/ip_address_server.rs"
