[package]
name = "bitconch-programs"
description = "Blockchain, Rebuilt for Scale"
version = "0.12.0"
documentation = "https://docs.rs/bitconch"
homepage = "https://bitconch.io/"
readme = "README.md"
repository = "https://github.com/bitconch/bus"
authors = ["Bitconch Dev <info@bitconch.io>"]
license = "Apache-2.0"
edition = "2018"

[features]
bpf_c = ["bitconch-bpfloader/bpf_c"]
bpf_rust = ["bitconch-bpfloader/bpf_rust"]
chacha = ["bitconch/chacha"]
cuda = ["bitconch/cuda"]
erasure = ["bitconch/erasure"]

[dependencies]
bitconch = { path = "..", version = "0.12.0" }
bitconch-bpfloader = { path = "native/bpf_loader", version = "0.12.0" }
bitconch-logger = { path = "../logger", version = "0.12.0" }
bitconch-native-loader = { path = "native/native_loader", version = "0.12.0" }
bitconch-sdk = { path = "../sdk", version = "0.12.0" }
