[package]
authors = ["Soros Maintainers <maintainers@soros.com>"]
edition = "2018"
name = "soros-replicator"
version = "1.1.2"
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
homepage = "https://soros.com/"

[dependencies]
clap = "2.33.0"
soros = { path = "../core", version = "1.1.2"   }
soros-logger = { path = "../logger", version = "1.1.2"   }
soros-netutil = { path = "../netutil", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }

[features]
chacha = ["soros/chacha"]
cuda = ["soros/cuda"]
