[package]
authors = ["Caesar Chad <caesar@bitconch.io>"]
edition = "2018"
name = "soros-replicator"
version = "1.1.2"
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
clap = "2.33.0"
soros = { path = "../core", version = "1.1.2"   }
soros-logger = { path = "../logger", version = "1.1.2"   }
soros-netutil = { path = "../netutil", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }

[features]
chacha = ["soros/chacha"]
cuda = ["soros/cuda"]
