[package]
name = "bitconch-runtime"
version = "0.12.0"
description = "Bitconch runtime"
authors = ["Bitconch Dev <info@bitconch.io>"]
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[dependencies]
bitconch-sdk = { path = "../sdk", version = "0.12.0" }
bitconch-native-loader = { path = "../programs/native/native_loader", version = "0.12.0" }
bitconch-system-program = { path = "../programs/native/system", version = "0.12.0" }

[lib]
name = "bitconch_runtime"
crate-type = ["lib"]

