[package]
name = "soros-runtime"
version = "1.1.2"
description = "Soros runtime"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"
edition = "2018"

[dependencies]
bincode = "1.1.2"
bv = { version = "0.11.0", features = ["serde"] }
byteorder = "1.3.1"
fnv = "1.0.6"
hashbrown = "0.2.0"
libc = "0.2.49"
libloading = "0.5.0"
log = "0.4.2"
memmap = "0.6.2"
rand = "0.6.5"
rayon = "1.0.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
soros-logger = { path = "../logger", version = "1.1.2"   }
soros-metrics = { path = "../metrics", version = "1.1.2"   }
soros-sdk = { path = "../sdk", version = "1.1.2"   }
soros-vote-api = { path = "../programs/vote_api", version = "1.1.2"   }

[lib]
name = "soros_runtime"
crate-type = ["lib"]

