[package]
name = "bitconch-sdk"
version = "0.12.0"
description = "Bitconch SDK"
authors = ["Bitconch Dev <info@bitconch.io>"]
repository = "https://github.com/bitconch/bus"
homepage = "https://bitconch.io/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.1.1"
bs58 = "0.2.0"
byteorder = "1.2.1"
chrono = { version = "0.4.0", features = ["serde"] }
generic-array = { version = "0.12.0", default-features = false, features = ["serde"] }
log = "0.4.2"
ring = "0.13.2"
sha2 = "0.8.0"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0.38"
untrusted = "0.6.2"
