[package]
name = "soros-sdk"
version = "0.14.2"
description = "Soros SDK"
authors = ["Bitconch Core <dev@bitconch.io>"]
repository = "https://github.com/bitconch/bus"
homepage = "https://bitconch.io/"
license = "Apache-2.0"
edition = "2018"

[dependencies]
bincode = "1.1.3"
bs58 = "0.2.0"
ed25519-dalek = "1.0.0-pre.0"
hex = "0.3.2"
byteorder = "1.2.1"
chrono = { version = "0.4.0", features = ["serde"] }
generic-array = { version = "0.13.0", default-features = false, features = ["serde"] }
itertools = "0.8.0"
log = "0.4.2"
num-derive = "0.2"
num-traits = "0.2"
rand = "0.6.5"
rayon = "1.0.0"
sha2 = "0.8.0"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
untrusted = "0.6.2"
