[package]
name = "soros-upload-perf"
version = "0.14.0"
description = "Metrics Upload Utility"
authors = ["Soros Maintainers <maintainers@soros.com>"]
repository = "https://github.com/soros-labs/soros"
license = "Apache-2.0"
edition = "2018"
homepage = "https://soros.com/"

[dependencies]
serde_json = "1.0.39"
soros-metrics = { path = "../metrics", version = "0.14.0" }

[[bin]]
name = "soros-upload-perf"
path = "src/upload-perf.rs"

