[package]
name = "soros-upload-perf"
version = "1.1.2"
description = "Metrics Upload Utility"
authors = ["Caesar Chad <caesar@bitconch.io>"]
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
edition = "2018"
homepage = "https://bitconch.io/"

[dependencies]
serde_json = "1.0.39"
soros-metrics = { path = "../metrics", version = "1.1.2" }

[[bin]]
name = "soros-upload-perf"
path = "src/upload-perf.rs"

