[package]
authors = ["Bitconch Dev <info@bitconch.io>"]
edition = "2018"
name = "bitconch-vote-signer"
description = "Bitconch Vote Signing Service"
version = "0.12.0"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
bs58 = "0.2.0"
clap = "2.31"
log = "0.4.2"
jsonrpc-core = "10.1.0"
jsonrpc-derive = "10.1.0"
jsonrpc-http-server = "10.1.0"
serde = "1.0.88"
serde_json = "1.0.38"
bitconch-sdk = { path = "../sdk", version = "0.12.0" }
bitconch-metrics = { path = "../metrics", version = "0.12.0" }

[lib]
name = "bitconch_vote_signer"
crate-type = ["lib"]

[[bin]]
name = "bitconch-vote-signer"
path = "src/bin/main.rs"
