[package]
authors = ["Bitconch Dev Team"]
edition = "2018"
name = "soros-vote-signer"
description = "Bitconch Vote Signing Service"
version = "0.12.3"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"

[dependencies]
bs58 = "0.2.0"
clap = "2.31"
log = "0.4.2"
jsonrpc-core = "10.1.0"
jsonrpc-derive = "10.1.0"
jsonrpc-http-server = "10.1.0"
serde = "1.0.89"
serde_json = "1.0.39"
soros-sdk = { path = "../sdk", version = "0.12.3" }
soros-metrics = { path = "../metrics", version = "0.12.3" }

[lib]
name = "soros_vote_signer"
crate-type = ["lib"]

[[bin]]
name = "soros-vote-signer"
path = "src/bin/main.rs"
