[package]
authors = ["Caesar Chad <caesar@bitconch.io>"]
edition = "2018"
name = "soros-vote-signer"
description = "Soros Vote Signing Service"
version = "1.1.2"
repository = "https://github.com/caesarchad/rustelo-rust"
license = "Apache-2.0"
homepage = "https://bitconch.io/"

[dependencies]
bs58 = "0.2.0"
clap = "2.33"
log = "0.4.2"
jsonrpc-core = "11.0.0"
jsonrpc-derive = "11.0.0"
jsonrpc-http-server = "11.0.0"
serde = "1.0.90"
serde_json = "1.0.39"
soros-sdk = { path = "../sdk", version = "1.1.2"   }
soros-metrics = { path = "../metrics", version = "1.1.2"   }

[lib]
name = "soros_vote_signer"
crate-type = ["lib"]

[[bin]]
name = "soros-vote-signer"
path = "src/bin/main.rs"
