[package]
authors = ["Bitconch Dev Team"]
edition = "2018"
name = "soros-wallet"
description = "Blockchain, Rebuilt for Scale"
version = "0.12.3"
repository = "https://github.com/bitconch/bus"
license = "Apache-2.0"
homepage = "https://bitconch.io"

[dependencies]
bincode = "1.1.2"
bs58 = "0.2.0"
clap = "2.32.0"
chrono = { version = "0.4.0", features = ["serde"] }
dirs = "1.0.5"
log = "0.4.2"
serde_json = "1.0.39"
soros = { path = "../core", version = "0.12.3" }
soros-budget-api = { path = "../programs/budget_api", version = "0.12.3" }
soros-client = { path = "../client", version = "0.12.3" }
soros-drone = { path = "../drone", version = "0.12.3" }
soros-logger = { path = "../logger", version = "0.12.3" }
soros-sdk = { path = "../sdk", version = "0.12.3" }
soros-vote-api = { path = "../programs/vote_api", version = "0.12.3" }
soros-vote-signer = { path = "../vote-signer", version = "0.12.3" }

[dev-dependencies]
soros-budget-program = { path = "../programs/budget", version = "0.12.3" }

[features]
cuda = ["soros/cuda"]
